PROJECT( ufalgo )
CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0)

IF( NOT CMAKE_BUILD_TYPE )
    SET( CMAKE_BUILD_TYPE DEBUG )
ENDIF()

INCLUDE_DIRECTORIES(
    includes
)

SET( SOURCE_PATH src )

SET( TESTING_SOURCE_PATH test )
SET( CMAKE_CXX_STANDARD 11 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )
SET( CMAKE_CXX_EXTENSIONS OFF )
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic-errors -Wall -ftime-trace" )
SET( CMAKE_CXX_FLAGS_RELEASE "-O1" )

SET( CPP
    ${SOURCE_PATH}/main.cpp
    ${SOURCE_PATH}/union_find.cpp
)


ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${CPP}
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
)

file(WRITE ${CMAKE_BINARY_DIR}/cp.cmake
	"file(COPY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION time-trace FILES_MATCHING PATTERN *.json PATTERN time-trace EXCLUDE)\n"
)

add_custom_command(
  TARGET ${PROJECT_NAME}
  POST_BUILD
  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/cp.cmake
)
